# news-link-collector

./: README.md  app.py  docker-compose.yml  pyproject.toml
app/: app.py  models.py
data/: dtri-kinh-doanh.rss  vnx-kinh-doanh.rss.xml
