[tool.poetry]
name = "news-link-collector"
version = "0.1.0"
description = ""
authors = ["Le Vuong Nguyen <vuong.se@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
feedparser = "^6.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
